# predicate-secure

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
demo/: .env.example  ARCHITECTURE.md  BLOG_POST.md  CHANGELOG.md  DEMO_COMPLETE.txt  INDEX.md  QUICKSTART.md  README.md  SIDECAR_SETUP.md  demo_summary.txt  local_llm_verifier.py  requirements.txt  secure_browser_demo.py
demo/policies/: browser_automation.yaml
docs/: user-manual.md
examples/: browser_use_checkout.py  langchain_tool_guard.py  openclaw_browser_automation.py  playwright_form_fill.py
src/predicate_secure/: __init__.py  adapters.py  config.py  detection.py  openclaw_adapter.py  tracing.py
tests/: __init__.py  test_adapters.py  test_adapters_integration.py  test_openclaw_adapter.py  test_secure_agent.py  test_tracing.py
