[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predicate-secure"
version = "0.2.0"
description = "Drop-in security wrapper for AI agents - adds authorization, verification, and audit to any agent framework"
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Predicate Systems Contributors"}
]
keywords = [
    "ai",
    "agents",
    "security",
    "authorization",
    "verification",
    "browser-use",
    "langchain",
    "playwright",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "predicate-authority>=0.1.0",
    "predicate>=0.1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
    "mypy>=1.8",
    "bandit>=1.7",
    "pre-commit>=3.0",
]
browser-use = [
    "browser-use>=0.1.0",
]
langchain = [
    "langchain>=0.1.0",
]
playwright = [
    "playwright>=1.40",
]
all = [
    "predicate-secure[browser-use,langchain,playwright]",
]

[project.urls]
Homepage = "https://github.com/anthropics/predicate-secure"
Documentation = "https://docs.predicate.systems/secure"
Repository = "https://github.com/anthropics/predicate-secure"
Issues = "https://github.com/anthropics/predicate-secure/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]
max-complexity = 15

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = false
disallow_untyped_defs = false
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
    "tests",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = ["B101", "B601", "B404"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
